src/server/run/hpo_sim/snapshots/viguno__server__actix_server__hpo_sim__term_term__test__hpo_sim_term_term_two_two.snap
---
source: src/server/actix_server/hpo_sim/term_term.rs
expression: "&run_query(\"/hpo/sim/term-term?lhs=HP:0010442,HP:0000347&rhs=HP:0001780,HP:0000252\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  lhs:
    - "HP:0010442"
    - "HP:0000347"
  rhs:
    - "HP:0001780"
    - "HP:0000252"
  ic_base: gene
  similarity: resnik
  combiner: fun-sim-avg
result:
  - lhs: "HP:0010442"
    rhs: "HP:0001780"
    score: 1.2074362
  - lhs: "HP:0000347"
    rhs: "HP:0000252"
    score: 0.7606594
  - lhs: "HP:0010442"
    rhs: "HP:0000252"
    score: 0.48051217
  - lhs: "HP:0000347"
    rhs: "HP:0001780"
    score: 0.48051217

